expense creation with user defined categories and bug fixed/patched other files